@@ -1,0 +1,140 @@
+EXPDTA    THEORETICAL MODEL, MODELLER 9v5 2012/07/02 18:43:41
+REMARK   6 MODELLER OBJECTIVE FUNCTION:       191.2948
+ATOM      1  N   ALA     1      11.075   6.269   2.498  0.00  0.00           N
+ATOM      2  H   ALA     1      11.480   6.887   1.765  1.00  0.00           H
+ATOM      3  CA  ALA     1      11.812   4.988   2.540  0.00  0.00           C
+ATOM      4  HA  ALA     1      11.396   4.816   1.558  1.00  0.00           H
+ATOM      5  CB  ALA     1      10.987   3.729   2.871  1.00  0.00           C
+ATOM      6  HB1 ALA     1       9.922   4.005   3.027  1.00  0.00           H
+ATOM      7  HB2 ALA     1      11.046   2.990   2.044  1.00  0.00           H
+ATOM      8  HB3 ALA     1      11.368   3.253   3.802  1.00  0.00           H
+ATOM      9  C   ALA     1      13.151   4.757   1.944  0.00  0.00           C
+ATOM     10  O   ALA     1      14.165   4.857   2.635  1.00  0.00           O
+ATOM     11  H2  ALA     1      11.140   6.738   3.426  1.00  0.00           H
+ATOM     12  H3  ALA     1      10.075   6.083   2.275  1.00  0.00           H
+ATOM     13  N   ALA     2      13.171   4.458   0.630  1.00  0.00           N
+ATOM     14  H   ALA     2      12.336   4.362   0.091  1.00  0.00           H
+ATOM     15  CA  ALA     2      14.399   4.280  -0.077  1.00  0.00           C
+ATOM     16  HA  ALA     2      13.849   4.727  -0.894  1.00  0.00           H
+ATOM     17  CB  ALA     2      14.545   3.243  -1.209  1.00  0.00           C
+ATOM     18  HB1 ALA     2      15.595   2.888  -1.280  1.00  0.00           H
+ATOM     19  HB2 ALA     2      13.886   2.370  -1.022  1.00  0.00           H
+ATOM     20  HB3 ALA     2      14.258   3.702  -2.181  1.00  0.00           H
+ATOM     21  C   ALA     2      15.300   5.462  -0.087  1.00  0.00           C
+ATOM     22  O   ALA     2      16.507   5.339   0.126  1.00  0.00           O
+ATOM     23  N   ALA     3      14.708   6.650  -0.306  1.00  0.00           N
+ATOM     24  H   ALA     3      13.731   6.732  -0.492  1.00  0.00           H
+ATOM     25  CA  ALA     3      15.446   7.871  -0.222  1.00  0.00           C
+ATOM     26  HA  ALA     3      14.518   8.259   0.169  1.00  0.00           H
+ATOM     27  CB  ALA     3      15.149   9.075  -1.139  1.00  0.00           C
+ATOM     28  HB1 ALA     3      14.345   8.821  -1.863  1.00  0.00           H
+ATOM     29  HB2 ALA     3      14.814   9.945  -0.534  1.00  0.00           H
+ATOM     30  HB3 ALA     3      16.057   9.368  -1.707  1.00  0.00           H
+ATOM     31  C   ALA     3      16.062   8.123   1.103  1.00  0.00           C
+ATOM     32  O   ALA     3      17.206   8.545   1.204  1.00  0.00           O
+ATOM     33  N   ALA     4      15.314   7.862   2.180  1.00  0.00           N
+ATOM     34  H   ALA     4      14.386   7.500   2.134  1.00  0.00           H
+ATOM     35  CA  ALA     4      15.853   8.128   3.476  1.00  0.00           C
+ATOM     36  HA  ALA     4      16.165   9.160   3.499  1.00  0.00           H
+ATOM     37  CB  ALA     4      14.859   7.837   4.614  1.00  0.00           C
+ATOM     38  HB1 ALA     4      13.944   8.456   4.504  1.00  0.00           H
+ATOM     39  HB2 ALA     4      14.566   6.765   4.605  1.00  0.00           H
+ATOM     40  HB3 ALA     4      15.328   8.065   5.596  1.00  0.00           H
+ATOM     41  C   ALA     4      17.024   7.254   3.700  1.00  0.00           C
+ATOM     42  O   ALA     4      18.014   7.705   4.272  1.00  0.00           O
+ATOM     43  N   ALA     5      16.923   5.976   3.287  1.00  0.00           N
+ATOM     44  H   ALA     5      16.117   5.622   2.817  1.00  0.00           H
+ATOM     45  CA  ALA     5      17.972   5.038   3.570  1.00  0.00           C
+ATOM     46  HA  ALA     5      18.132   5.036   4.638  1.00  0.00           H
+ATOM     47  CB  ALA     5      17.672   3.623   3.051  1.00  0.00           C
+ATOM     48  HB1 ALA     5      16.760   3.213   3.533  1.00  0.00           H
+ATOM     49  HB2 ALA     5      17.520   3.642   1.951  1.00  0.00           H
+ATOM     50  HB3 ALA     5      18.525   2.946   3.275  1.00  0.00           H
+ATOM     51  C   ALA     5      19.217   5.481   2.877  1.00  0.00           C
+ATOM     52  O   ALA     5      20.301   5.353   3.448  1.00  0.00           O
+ATOM     53  N   ALA     6      19.096   5.951   1.612  1.00  0.00           N
+ATOM     54  H   ALA     6      18.217   6.040   1.151  1.00  0.00           H
+ATOM     55  CA  ALA     6      20.266   6.287   0.842  1.00  0.00           C
+ATOM     56  HA  ALA     6      20.923   5.432   0.885  1.00  0.00           H
+ATOM     57  CB  ALA     6      19.936   6.601  -0.627  1.00  0.00           C
+ATOM     58  HB1 ALA     6      19.452   5.727  -1.115  1.00  0.00           H
+ATOM     59  HB2 ALA     6      19.241   7.466  -0.687  1.00  0.00           H
+ATOM     60  HB3 ALA     6      20.861   6.854  -1.189  1.00  0.00           H
+ATOM     61  C   ALA     6      20.978   7.468   1.432  1.00  0.00           C
+ATOM     62  O   ALA     6      22.193   7.407   1.627  1.00  0.00           O
+ATOM     63  N   PRO     7      20.272   8.527   1.749  1.00  0.00           N
+ATOM     64  CA  PRO     7      20.902   9.540   2.521  1.00  0.00           C
+ATOM     65  HA  PRO     7      21.710   9.892   1.896  1.00  0.00           H
+ATOM     66  CD  PRO     7      19.705   9.246   0.617  1.00  0.00           C
+ATOM     67  HD3 PRO     7      20.497   9.353  -0.155  1.00  0.00           H
+ATOM     68  HD2 PRO     7      18.844   8.678   0.206  1.00  0.00           H
+ATOM     69  CB  PRO     7      19.823  10.601   2.625  1.00  0.00           C
+ATOM     70  HB3 PRO     7      20.221  11.581   2.964  1.00  0.00           H
+ATOM     71  HB2 PRO     7      19.017  10.261   3.310  1.00  0.00           H
+ATOM     72  CG  PRO     7      19.309  10.636   1.174  1.00  0.00           C
+ATOM     73  HG3 PRO     7      19.836  11.430   0.603  1.00  0.00           H
+ATOM     74  HG2 PRO     7      18.214  10.818   1.135  1.00  0.00           H
+ATOM     75  C   PRO     7      21.563   9.148   3.817  1.00  0.00           C
+ATOM     76  O   PRO     7      22.645   9.684   4.090  1.00  0.00           O
+ATOM     77  N   ALA     8      20.980   8.244   4.627  1.00  0.00           N
+ATOM     78  H   ALA     8      20.109   7.806   4.425  1.00  0.00           H
+ATOM     79  CA  ALA     8      21.618   7.904   5.873  1.00  0.00           C
+ATOM     80  HA  ALA     8      21.810   8.828   6.398  1.00  0.00           H
+ATOM     81  CB  ALA     8      20.766   6.960   6.736  1.00  0.00           C
+ATOM     82  HB1 ALA     8      19.789   7.433   6.965  1.00  0.00           H
+ATOM     83  HB2 ALA     8      20.580   6.006   6.199  1.00  0.00           H
+ATOM     84  HB3 ALA     8      21.284   6.737   7.692  1.00  0.00           H
+ATOM     85  C   ALA     8      22.919   7.223   5.596  1.00  0.00           C
+ATOM     86  O   ALA     8      23.900   7.455   6.303  1.00  0.00           O
+ATOM     87  N   ALA     9      22.946   6.340   4.574  1.00  0.00           N
+ATOM     88  H   ALA     9      22.148   6.155   4.005  1.00  0.00           H
+ATOM     89  CA  ALA     9      24.133   5.581   4.285  1.00  0.00           C
+ATOM     90  HA  ALA     9      24.419   5.066   5.192  1.00  0.00           H
+ATOM     91  CB  ALA     9      23.934   4.587   3.130  1.00  0.00           C
+ATOM     92  HB1 ALA     9      23.115   3.875   3.367  1.00  0.00           H
+ATOM     93  HB2 ALA     9      23.669   5.125   2.196  1.00  0.00           H
+ATOM     94  HB3 ALA     9      24.866   4.010   2.952  1.00  0.00           H
+ATOM     95  C   ALA     9      25.226   6.516   3.882  1.00  0.00           C
+ATOM     96  O   ALA     9      26.381   6.337   4.276  1.00  0.00           O
+ATOM     97  N   ALA    10      24.891   7.530   3.058  1.00  0.00           N
+ATOM     98  H   ALA    10      23.958   7.695   2.744  1.00  0.00           H
+ATOM     99  CA  ALA    10      25.908   8.411   2.556  1.00  0.00           C
+ATOM    100  HA  ALA    10      26.662   7.803   2.081  1.00  0.00           H
+ATOM    101  CB  ALA    10      25.370   9.462   1.567  1.00  0.00           C
+ATOM    102  HB1 ALA    10      24.892   8.965   0.697  1.00  0.00           H
+ATOM    103  HB2 ALA    10      24.619  10.115   2.061  1.00  0.00           H
+ATOM    104  HB3 ALA    10      26.201  10.098   1.192  1.00  0.00           H
+ATOM    105  C   ALA    10      26.518   9.151   3.701  1.00  0.00           C
+ATOM    106  O   ALA    10      27.730   9.358   3.739  1.00  0.00           O
+ATOM    107  N   ALA    11      25.682   9.595   4.659  1.00  0.00           N
+ATOM    108  H   ALA    11      24.698   9.433   4.639  1.00  0.00           H
+ATOM    109  CA  ALA    11      26.192  10.382   5.750  1.00  0.00           C
+ATOM    110  HA  ALA    11      26.725  11.220   5.326  1.00  0.00           H
+ATOM    111  CB  ALA    11      25.086  10.870   6.698  1.00  0.00           C
+ATOM    112  HB1 ALA    11      24.348  11.485   6.141  1.00  0.00           H
+ATOM    113  HB2 ALA    11      24.558  10.004   7.151  1.00  0.00           H
+ATOM    114  HB3 ALA    11      25.520  11.488   7.514  1.00  0.00           H
+ATOM    115  C   ALA    11      27.137   9.560   6.562  1.00  0.00           C
+ATOM    116  O   ALA    11      28.161  10.059   7.034  1.00  0.00           O
+ATOM    117  N   ALA    12      26.796   8.277   6.775  1.00  0.00           N
+ATOM    118  H   ALA    12      25.970   7.869   6.394  1.00  0.00           H
+ATOM    119  CA  ALA    12      27.604   7.450   7.628  1.00  0.00           C
+ATOM    120  HA  ALA    12      27.689   7.946   8.584  1.00  0.00           H
+ATOM    121  CB  ALA    12      27.026   6.039   7.794  1.00  0.00           C
+ATOM    122  HB1 ALA    12      27.670   5.439   8.472  1.00  0.00           H
+ATOM    123  HB2 ALA    12      26.006   6.089   8.231  1.00  0.00           H
+ATOM    124  HB3 ALA    12      26.970   5.534   6.806  1.00  0.00           H
+ATOM    125  C   ALA    12      28.964   7.307   7.028  1.00  0.00           C
+ATOM    126  O   ALA    12      29.943   7.349   7.768  1.00  0.00           O
+ATOM    127  N   ALA    13      29.033   7.123   5.685  1.00  0.00           N
+ATOM    128  H   ALA    13      28.202   7.152   5.136  1.00  0.00           H
+ATOM    129  CA  ALA    13      30.228   6.767   4.940  1.00  0.00           C
+ATOM    130  HA  ALA    13      30.179   5.697   4.802  1.00  0.00           H
+ATOM    131  CB  ALA    13      30.280   7.437   3.555  1.00  0.00           C
+ATOM    132  HB1 ALA    13      31.160   7.075   2.983  1.00  0.00           H
+ATOM    133  HB2 ALA    13      29.364   7.189   2.977  1.00  0.00           H
+ATOM    134  HB3 ALA    13      30.353   8.542   3.654  1.00  0.00           H
+ATOM    135  C   ALA    13      31.582   7.077   5.615  1.00  0.00           C
+ATOM    136  O   ALA    13      32.308   7.998   5.146  1.00  0.00           O
+ATOM    137  OXT ALA    13      31.931   6.348   6.585  1.00  0.00           O
+END
