@@ -32,8 +32,9 @@ Note that the files are actually located in a separate package,
 __all__ = ["PSF", "DCD", "CRD",               # CHARMM
            "DCD_empty",
            "PSF_NAMD", "PDB_NAMD",            # NAMD
-           "PDB_small","NUCL",                   # PDB
+           "PDB_small","NUCL",                # PDB
            "PDB_multiframe",
+           "PDB_helix",
            "PDB", "GRO", "XTC", "TRR", "TPR", "GRO_velocity",   # Gromacs
            "XYZ", "XYZ_psf", "XYZ_bz2",         # XYZ
            "PRM", "TRJ", "TRJ_bz2",             # Amber (no periodic box)
@@ -59,6 +60,8 @@ PDB_NAMD = resource_filename(__name__, 'data/namd_cgenff.pdb')
 PDB_small = resource_filename(__name__, 'data/adk_open.pdb')
 NUCL =  resource_filename(__name__, 'data/1k5i.pdb')
 PDB_multiframe = resource_filename(__name__, 'data/nmr_neopetrosiamide.pdb')
+PDB_helix = resource_filename(__name__, 'data/A6PA6_alpha.pdb')
+
 GRO = resource_filename(__name__, 'data/adk_oplsaa.gro')
 GRO_velocity = resource_filename(__name__, 'data/sample_velocity_file.gro')
 PDB = resource_filename(__name__, 'data/adk_oplsaa.pdb')
